--- a/app/src/main/res/layout/activity_new_idea.xml
+++ b/app/src/main/res/layout/activity_new_idea.xml
@@ -11,8 +11,8 @@
     android:id="@+id/et_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:hint="我们坚信写作写的是内容，所思所想，而非花样。\n 写你在哪里，听着网易云的什么歌，最近看到了什么，想到了哪个人吧！
-\n 推荐使用Markdown 语法写作，如果你不懂，就去帮助页面寻求指南。"
+    android:hint="写作写的是内容，所思所想，而非花样。\n 写你在哪里，听着网易云的什么歌，最近看到了什么，想到了哪个人吧！
+\n 推荐使用Markdown 语法写作"
     android:layout_weight="1"
      />
 
