--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,29 +1,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
 
-    android:layout_height="fill_parent"
-    >
+    android:layout_height="fill_parent">
+
     <ImageView
         android:id="@+id/login_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <TableLayout
+
+        android:id="@+id/table_layout"
 
         android:layout_width="fill_parent"
 
         android:layout_height="fill_parent"
 
         android:gravity="center_vertical"
-
-        android:id="@+id/table_layout"
         android:stretchColumns="0,4">
 
         <TableRow>
+
             <com.paul.t29ideagarden2.views.MailLineView
                 android:layout_height="5dp"
+                android:layout_column="1"
                 android:layout_marginTop="4dp"
-                android:layout_span="3"
-                android:layout_column="1"/>
+                android:layout_span="3" />
 
         </TableRow>
 
@@ -33,11 +35,11 @@
 
             <TextView
 
-                android:text="名   字："
-
                 android:layout_width="wrap_content"
 
                 android:layout_height="wrap_content"
+
+                android:text="名   字："
 
                 android:textSize="24sp"
 
@@ -47,15 +49,15 @@
 
                 android:id="@+id/account"
 
-                android:layout_span="2"
-
                 android:layout_width="wrap_content"
 
                 android:layout_height="wrap_content"
 
-                android:textSize="24sp"
+                android:layout_span="2"
 
-                android:minWidth="220px"/>
+                android:minWidth="220px"
+
+                android:textSize="24sp" />
 
             <TextView />
 
@@ -67,11 +69,11 @@
 
             <TextView
 
-                android:text="密   码："
-
                 android:layout_width="wrap_content"
 
                 android:layout_height="wrap_content"
+
+                android:text="密   码："
 
                 android:textSize="24sp"
 
@@ -80,28 +82,30 @@
             <EditText
 
                 android:id="@+id/pwd"
-                android:layout_span="2"
-
-
                 android:layout_width="wrap_content"
+
 
                 android:layout_height="wrap_content"
 
+                android:layout_span="2"
+
+                android:inputType="textPassword"
+
                 android:minWidth="220px"
 
-                android:textSize="24sp"
-
-                android:inputType="textPassword"/>
+                android:textSize="24sp" />
 
             <TextView />
 
         </TableRow>
+
         <TableRow>
+
             <com.paul.t29ideagarden2.views.MailLineView
                 android:layout_height="5dp"
+                android:layout_column="1"
                 android:layout_marginTop="4dp"
-                android:layout_span="3"
-                android:layout_column="1"/>
+                android:layout_span="3" />
 
         </TableRow>
 
@@ -114,36 +118,39 @@
 
                 android:id="@+id/login"
 
-                android:text="登录"
-
-                android:onClick="login"
-
                 android:layout_width="wrap_content"
 
                 android:layout_height="wrap_content"
 
+                android:onClick="login"
+
+                android:text="登录"
+
                 />
 
+
+
+            <Button
+                android:id="@+id/register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="register"
+                android:text="注册" />
+
+            <TextView />
+
+        </TableRow>
+        <TableRow>
             <Button
 
                 android:id="@+id/quit"
 
-                android:text="退出"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_span="3"
                 android:onClick="logout"
-
-                android:layout_width="wrap_content"
-
-                android:layout_height="wrap_content"/>
-
-            <Button
-                android:id="@+id/register"
-                android:text="注册"
-                android:onClick="register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView />
-
+                android:layout_column="1"
+                android:text="退出当前用户" />
         </TableRow>
 
     </TableLayout>
