--- a/app/src/main/res/layout/activity_see_idea.xml
+++ b/app/src/main/res/layout/activity_see_idea.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+<LinearLayout
     android:orientation="vertical"
-    android:gravity="center_vertical"
-    tools:context="com.paul.t29ideagarden2.atys.SeeIdeaActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
     <TextView
         android:id="@+id/text_markdown"
+        android:textSize="25sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
@@ -29,5 +34,5 @@
         android:textColor="@color/green"
         android:layout_alignParentRight="true"
         />
-
-</RelativeLayout>
+</LinearLayout>
+    </ScrollView>
