--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,7 +21,7 @@
         <item
             android:id="@+id/nav_help"
             android:icon="@drawable/ic_live_help_black_18dp"
-            android:title="Help"/>
+            android:title="@string/help"/>
     </group>
 
 
