--- a/app/src/main/res/layout/activity_meditation.xml
+++ b/app/src/main/res/layout/activity_meditation.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/user_profile"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ProgressBar
@@ -31,17 +31,19 @@
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/user_profile"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_person_outline_black_48dp" />
+        app:srcCompat="@drawable/ic_buddhist_monk" />
 
     <TextView
         android:id="@+id/textView"
@@ -52,7 +54,7 @@
         android:layout_marginTop="8dp"
         android:text="UserName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/user_profile"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -63,7 +65,7 @@
         android:layout_marginStart="8dp"
         android:text="LV:"
         app:layout_constraintEnd_toStartOf="@+id/progressBar"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/user_profile"
         app:layout_constraintTop_toTopOf="@+id/progressBar" />
 
     <TextView
@@ -77,8 +79,25 @@
         app:layout_constraintTop_toTopOf="@+id/progressBar2" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="368dp"
-        android:layout_height="387dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="116dp" />
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_profile" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.89"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recyclerView"
+        app:srcCompat="@drawable/ic_icons8_meditation_gu" />
 </android.support.constraint.ConstraintLayout>
